--- a/app/src/main/res/layout/row_category_adapter.xml
+++ b/app/src/main/res/layout/row_category_adapter.xml
@@ -2,16 +2,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="12dp"
-    android:background="@color/teal_200"
-    android:layout_margin="6dp">
+    android:background="@drawable/item_background_design"
+    android:layout_margin="16dp">
 
 
 
     <ImageView
         android:src="@mipmap/ic_launcher"
         android:id="@+id/image_view_category"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
          />
 
     <TextView
