--- a/app/src/main/res/layout/row_product_adapter.xml
+++ b/app/src/main/res/layout/row_product_adapter.xml
@@ -2,14 +2,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="6dp"
-    android:background="@color/teal_200"
-    android:padding="12dp">
+    android:background="@drawable/item_background_design"
+    android:padding="16dp">
 
 
     <ImageView
         android:id="@+id/image_view_product"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
