--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,31 +1,73 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/green_faded"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <ImageView
+        android:layout_marginTop="36dp"
+        android:id="@+id/image_view_login"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="LOGIN"
+        android:textColor="@color/white"
+        android:textSize="46dp"
+        android:textStyle="bold"
+        android:gravity="center"/>
+
     <EditText
+        android:paddingLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:id="@+id/edit_text_email_login"
-        android:layout_margin="10dp"
+        android:background="@drawable/item_background_design"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:textSize="26dp"/>
+        android:textColorHint="@color/light_green"
+        android:textSize="36dp"/>
 
     <EditText
+        android:paddingLeft="15dp"
+        android:background="@drawable/item_background_design"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:id="@+id/edit_text_password_login"
-        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
-        android:textSize="26dp"/>
+        android:textColorHint="@color/light_green"
+        android:textSize="36dp"/>
 
     <Button
         android:id="@+id/button_login_login"
-        android:layout_margin="10dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:background="@drawable/button_design"
+        android:layout_marginTop="30dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
+        android:textColor="#69FF97"
         android:layout_gravity="center"
-        android:textSize="26dp"/>
+        android:textSize="30dp"/>
+
+    <TextView
+        android:id="@+id/text_view_login"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Already have account? Click here to login"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:layout_gravity="center"/>
 
 </LinearLayout>
