--- a/app/src/main/res/layout/activity_login_or_register.xml
+++ b/app/src/main/res/layout/activity_login_or_register.xml
@@ -1,33 +1,44 @@
 <RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="@drawable/green_faded"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:layout_width="wrap_content"
+        android:background="@drawable/item_background_design"
         android:layout_height="wrap_content"
         android:text="Yummy Grocery"
+        android:padding="16dp"
         android:layout_centerHorizontal="true"
         android:textSize="36dp"
-        android:textColor="#000"
+        android:textColor="@color/light_green"
         android:textStyle="bold"/>
 
     <Button
         android:id="@+id/button_register_loginreg"
+        android:background="@drawable/button_design"
+        android:padding="10dp"
+        android:layout_marginBottom="25dp"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Register"
-        android:textSize="36dp"
+        android:textSize="26dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/light_green"/>
 
     <Button
         android:id="@+id/button_login_loginreg"
+        android:padding="10dp"
+        android:layout_marginBottom="25dp"
+        android:background="@drawable/button_design"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="Login"
-        android:textSize="36dp"
+        android:textSize="26dp"
         android:layout_above="@+id/button_register_loginreg"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/light_green"/>
 
 </RelativeLayout>
