--- a/app/src/main/res/layout/row_category_adapter.xml
+++ b/app/src/main/res/layout/row_category_adapter.xml
@@ -23,6 +23,8 @@
         android:layout_centerVertical="true"
         android:padding="5dp"
         android:text="Category Name"
-        android:textSize="26dp" />
+        android:textColor="@color/light_green"
+        android:textSize="28dp"
+        android:textStyle="bold"/>
 
 </RelativeLayout>
