--- a/app/src/main/res/layout/row_product_adapter.xml
+++ b/app/src/main/res/layout/row_product_adapter.xml
@@ -19,8 +19,10 @@
         android:layout_centerHorizontal="true"
         android:layout_toRightOf="@+id/image_view_product"
         android:padding="5dp"
+        android:textColor="@color/light_green"
         android:text="Category Name"
-        android:textSize="26dp" />
+        android:textSize="28dp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/text_view_product_price"
@@ -31,6 +33,8 @@
         android:layout_marginTop="18dp"
         android:layout_toRightOf="@+id/image_view_product"
         android:text="20"
-        android:textSize="26dp" />
+        android:textStyle="bold"
+        android:textColor="@color/light_green"
+        android:textSize="30dp" />
 
 </RelativeLayout>
