--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -1,70 +1,77 @@
-<RelativeLayout android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="5dp"
 
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/image_view_detail"
         android:layout_width="match_parent"
-        android:layout_height="350dp"/>
+        android:layout_height="350dp" />
 
     <TextView
         android:id="@+id/text_view_name_detail"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:layout_below="@+id/image_view_detail"
+        android:layout_marginTop="5dp"
         android:text="Product Name"
         android:textColor="#000"
-        android:layout_below="@+id/image_view_detail"/>
+        android:textSize="30dp" />
 
-    <TextView
-        android:id="@+id/text_view_unit_detail"
-        android:layout_marginTop="16dp"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:textColor="#000"
-        android:text="Unit"
-        android:layout_below="@+id/text_view_name_detail"/>
+        android:layout_below="@+id/text_view_name_detail"
+        android:layout_above="@id/text_view_price_detail">
+
+        <TextView
+            android:id="@+id/text_view_unit_detail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Unit"
+            android:textColor="#000"
+            android:textSize="20dp" />
+
+    </ScrollView>
 
     <TextView
         android:id="@+id/text_view_price_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:padding="8dp"
         android:text="Price"
         android:textColor="#000"
-        android:padding="8dp"
-        android:layout_alignParentBottom="true"
-        android:textSize="30dp"/>
+        android:textSize="30dp" />
 
     <Button
         android:id="@+id/button_view_cart_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View Cart"
-        android:textColor="@color/white"
         android:layout_alignParentBottom="true"
+        android:layout_marginRight="8dp"
         android:layout_toLeftOf="@+id/button_add_to_cart_detail"
-        android:textSize="20dp"
         android:background="@drawable/button_design"
         android:backgroundTint="@color/light_green"
         android:padding="8dp"
-        android:layout_marginRight="8dp"/>
+        android:text="View Cart"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
 
     <Button
         android:id="@+id/button_add_to_cart_detail"
         android:layout_width="wrap_content"
-        android:textColor="@color/white"
         android:layout_height="wrap_content"
-        android:text="Add to cart"
-        android:background="@drawable/button_design"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/button_design"
         android:backgroundTint="@color/light_green"
         android:padding="8dp"
-        android:textSize="20dp"/>
+        android:text="Add to cart"
+        android:textColor="@color/white"
+        android:textSize="20dp" />
 
 </RelativeLayout>
