--- a/app/src/main/res/layout/row_cart_adapter.xml
+++ b/app/src/main/res/layout/row_cart_adapter.xml
@@ -66,6 +66,7 @@
             android:gravity="center_horizontal"
             android:layout_width="45dp"
             android:layout_height="45dp"
+            android:text="1"
             android:textSize="30dp" />
 
         <Button
