--- a/app/src/main/res/layout/activity_sub_cat.xml
+++ b/app/src/main/res/layout/activity_sub_cat.xml
@@ -3,6 +3,8 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <include layout="@layout/app_bar"/>
+
     <com.google.android.material.tabs.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
