--- a/app/src/main/res/layout/row_cart_adapter.xml
+++ b/app/src/main/res/layout/row_cart_adapter.xml
@@ -21,7 +21,7 @@
         android:layout_toRightOf="@+id/image_view_cart"
         android:padding="5dp"
         android:text="Category Name"
-        android:textColor="@color/light_green"
+        android:textColor="@color/deeper_green"
         android:textSize="18dp"
         android:textStyle="bold" />
 
@@ -30,7 +30,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_alignParentRight="true"
-        android:backgroundTint="@color/light_green"
+        android:backgroundTint="@color/deeper_green"
         android:background="@drawable/ic_baseline_cancel_24"/>
 
 
@@ -43,7 +43,7 @@
         android:layout_marginTop="18dp"
         android:layout_toRightOf="@+id/image_view_cart"
         android:text="20"
-        android:textColor="@color/light_green"
+        android:textColor="@color/deeper_green"
         android:textSize="30dp"
         android:textStyle="bold" />
 
