--- a/app/src/main/res/layout/row_category_adapter.xml
+++ b/app/src/main/res/layout/row_category_adapter.xml
@@ -23,8 +23,8 @@
         android:layout_centerVertical="true"
         android:padding="5dp"
         android:text="Category Name"
-        android:textColor="@color/light_green"
-        android:textSize="28dp"
+        android:textColor="@color/deeper_green"
+        android:textSize="30dp"
         android:textStyle="bold"/>
 
 </RelativeLayout>
