--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -24,18 +24,6 @@
             android:textSize="36dp"
             android:textStyle="bold" />
 
-        <!--<Button
-
-            android:id="@+id/button_back_to_shopping"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:background="@drawable/button_design"
-            android:backgroundTint="@color/light_green"
-            android:padding="10dp"
-            android:text="Back to Shopping"
-            android:textColor="@color/white" />-->
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_cart"
             android:layout_width="match_parent"
@@ -49,7 +37,8 @@
             android:id="@+id/linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentBottom="false"
+            android:layout_above="@+id/button_place_order_cart"
             android:padding="16dp">
             <!--android:layout_above="@+id/button_place_order_cart"-->
 
@@ -122,23 +111,24 @@
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-
         </RelativeLayout>
+
+        <Button
+            android:id="@+id/button_place_order_cart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/button_design"
+            android:backgroundTint="@color/deeper_green"
+            android:text="Place Order"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold" />
+
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/button_place_order_cart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/button_design"
-        android:backgroundTint="@color/deeper_green"
-        android:text="Place Order"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:layout_marginBottom="10dp"
-        android:textStyle="bold" />
 
     <include android:id="@+id/empty_layout"
         layout="@layout/empty_cart_layout"/>
