--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -3,12 +3,11 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <include layout="@layout/app_bar" />
-
     <ImageView
         android:id="@+id/success_icon"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:src="@drawable/check_icon"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="150dp"/>
 
@@ -31,6 +30,9 @@
         android:background="@drawable/button_design"
         android:backgroundTint="@color/deeper_green"
         android:layout_alignParentBottom="true"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginBottom="10dp"
         android:text="Back to Shopping"/>
 
 </RelativeLayout>
