--- a/app/src/main/res/menu/cart_menu.xml
+++ b/app/src/main/res/menu/cart_menu.xml
@@ -7,16 +7,23 @@
         android:id="@+id/menu_cart"
         android:icon="@drawable/ic_baseline_shopping_cart_24"
         android:title="Cart" />
+
     <item
         app:showAsAction="never"
-        android:id="@+id/menu_logout"
-        android:icon="@drawable/ic_baseline_logout_24"
-        android:title="logout" />
+        android:id="@+id/menu_account"
+        android:icon="@drawable/ic_baseline_account_circle_24"
+        android:title="Account"/>
+
     <item
         app:showAsAction="never"
         android:id="@+id/menu_settings"
         android:icon="@drawable/ic_baseline_settings_24"
         android:title="settings" />
 
+    <item
+        app:showAsAction="never"
+        android:id="@+id/menu_logout"
+        android:icon="@drawable/ic_baseline_logout_24"
+        android:title="logout" />
 
 </menu>
