--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -1,6 +1,7 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/deeper_green"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <include layout="@layout/app_bar"/>
